fixing menu issue on IE and Safari

--- a/assets/css/sass/components/_nav.scss
+++ b/assets/css/sass/components/_nav.scss
@@ -1,7 +1,7 @@
 .jsHamburger {
     padding:5px;
     align-self:center;
-    position:absolute;
+/*    position:absolute;*/
     right:0;
 }
 
